--- a/index.html
+++ b/index.html
@@ -134,44 +134,62 @@
     const COOLDOWN_MS = 10_000, FAILSAFE_UNLOCK_MS = 25_000, IDLE_RESET_MIN = 3;
     const SESSION_KEY = 'sam_session_locked', LAST_ACTIVITY = 'sam_last_activity';
 
-    // Helpers
-    const $ = (s,r=document)=>r.querySelector(s);
+    // Helpers (renamed to avoid conflicts)
+    const qs   = (s, r = document) => r.querySelector(s);
     const show = el => el && el.classList.add('show');
     const hide = el => el && el.classList.remove('show');
 
-/* =========================================================
-   SEGMENT B — Utility helpers & system messages
-   ==========================================================*/
-function injectSystemMessage(text){
-  // n8n’s current DOM uses .chat-window > main.chat-body
-  // Try several containers so it works across versions.
-  const host = document.querySelector('#n8n-chat');
-  if (!host) { console.warn('[system] host not found'); return null; }
+    /* =========================================================
+       SEGMENT B — Utility helpers & system messages
+    ==========================================================*/
+    function injectSystemMessage(text){
+      const host = document.querySelector('#n8n-chat');
+      if (!host) return null;
 
-  const container =
-    host.querySelector('.chat-body') ||                // modern builds
-    host.querySelector('.chat-window') ||              // fallback
-    host.querySelector('.chat-window-wrapper') ||      // fallback
-    null;
+      // Try several containers so it works across n8n versions
+      const container =
+        host.querySelector('.chat-body') ||
+        host.querySelector('.chat-window') ||
+        host.querySelector('.chat-window-wrapper') ||
+        host.querySelector('.messages') ||
+        null;
 
-  if (!container) {
-    console.warn('[system] messages container not found');
-    return null;
-  }
+      if (!container) {
+        console.warn('[system] messages container not found');
+        return null;
+      }
 
-  const div = document.createElement('div');
-  div.className = 'message system';
-  div.style.margin = '6px 10px';
-  div.style.textAlign = 'center';
-  div.style.fontSize = '13px';
-  div.style.color = '#666';
-  div.style.fontStyle = 'italic';
-  div.textContent = text;
+      const div = document.createElement('div');
+      div.className = 'message system';
+      div.style.margin = '6px 10px';
+      div.style.textAlign = 'center';
+      div.style.fontSize = '13px';
+      div.style.color = '#666';
+      div.style.fontStyle = 'italic';
+      div.textContent = text;
 
-  container.appendChild(div);
-  container.scrollTop = container.scrollHeight;
-  return div; // we update this element every second during countdown
-}
+      container.appendChild(div);
+      container.scrollTop = container.scrollHeight;
+      return div;
+    }
+
+    function installWelcomeAutoHide(){
+      const note = qs('#welcomeNote'), host = qs('#n8n-chat');
+      if(!note || !host) return;
+      const mo = new MutationObserver(()=>{
+        if(host.querySelector('.message')){ note.classList.add('hidden'); mo.disconnect(); }
+      });
+      mo.observe(host,{childList:true,subtree:true});
+    }
+
+    // Session helpers
+    function isLocked(){ const last=Number(localStorage.getItem(LAST_ACTIVITY)||0);
+      if(Date.now()-last>IDLE_RESET_MIN*60_000){ localStorage.removeItem(SESSION_KEY); }
+      return !!localStorage.getItem(SESSION_KEY);
+    }
+    function lockSession(){ localStorage.setItem(SESSION_KEY,'1'); localStorage.setItem(LAST_ACTIVITY,String(Date.now())); }
+    function touchSession(){ localStorage.setItem(LAST_ACTIVITY,String(Date.now())); }
+    function unlockSession(){ localStorage.removeItem(SESSION_KEY); }
 
     /* =========================================================
        SEGMENT C — Countdown state + logic
@@ -192,25 +210,20 @@ function injectSystemMessage(text){
       if (btn) btn.disabled = on;
     }
 
-    // 👉 controls the visible countdown + disables input
+    // visible countdown + disables input
     function startCooldown(seconds = 10){
-      if (cooldownTimer) { console.log('[debug] cooldown already running'); return; }
+      if (cooldownTimer) return;                 // no double-start
       cooldownEndAt = Date.now() + seconds*1000;
-      console.log('[debug] startCooldown', seconds, 'seconds');
-
       setControlsDisabled(true);
 
       const update = () => {
         const remainingMs = cooldownRemaining();
         const secs = Math.ceil(remainingMs/1000);
-        console.log('[debug] tick', secs);
 
-        // Update system line (inside chat)
         if (!cooldownLine) cooldownLine = injectSystemMessage(`⏳ Tunggu ${secs}s sebelum mesej seterusnya.`);
         else cooldownLine.textContent = `⏳ Tunggu ${secs}s sebelum mesej seterusnya.`;
 
-        // Update small banner at top-right
-        const b=$('#cooldownBanner');
+        const b = qs('#cooldownBanner');
         b.textContent = `⏳ Sila tunggu ${secs} saat sebelum hantar soalan baharu.`;
         show(b);
 
@@ -224,8 +237,8 @@ function injectSystemMessage(text){
         }
       };
 
-      update(); // show immediately
-      cooldownTimer = setInterval(update, 1000);
+      update();                                   // show immediately
+      cooldownTimer = setInterval(update, 1000);  // then tick every second
     }
 
     // Block sends if cooling or a request is still in-flight
@@ -234,7 +247,7 @@ function injectSystemMessage(text){
       if(rem>0 || inFlight){
         e?.preventDefault();
         const secs = Math.ceil(rem/1000) || Math.ceil(COOLDOWN_MS/1000);
-        const b=$('#cooldownBanner');
+        const b = qs('#cooldownBanner');
         b.textContent=`⏳ Sila tunggu ${secs} saat sebelum hantar soalan baharu.`;
         show(b); setTimeout(()=>hide(b), 1200);
         if (!cooldownTimer) cooldownLine = injectSystemMessage(`⏳ Tunggu ${secs}s sebelum mesej seterusnya.`);
@@ -243,142 +256,128 @@ function injectSystemMessage(text){
       return false;
     }
 
-/* =========================================================
-   SEGMENT D — Guards: intercept input & start cooldown AFTER bot reply (REPLACED)
-==========================================================*/
-function installGuards(){
-  const root = document.getElementById('n8n-chat'); 
-  if (!root) return;
+    /* =========================================================
+       SEGMENT D — Guards: start countdown AFTER bot reply settles
+    ==========================================================*/
+    function installGuards(){
+      const root = document.getElementById('n8n-chat'); 
+      if (!root) return;
 
-  const box     = () => root.querySelector('textarea, input[type="text"]');
-  const sendBtn = () => root.querySelector('.chat-input button');
-  const disable = on => setControlsDisabled(on);
+      const box     = () => root.querySelector('textarea, input[type="text"]');
+      const sendBtn = () => root.querySelector('.chat-input button');
+      const disable = on => setControlsDisabled(on);
 
-  // Which nodes look like assistant messages?
-   const assistantSelectors = [
-    '.assistant',
-    '.message.assistant',
-    '.message.bot',
-    '.bot',
-    '.from-bot',
-    '.message--assistant',
-    '[data-source="assistant"]',
-    '[data-role="assistant"]',
-    // n8n bubbles commonly live inside main.chat-body:
-    '.chat-body .message',
-    '.chat-message'
-  ];
+      // Which nodes look like assistant messages?
+      const assistantSelectors = [
+        '.assistant','.message.assistant','.message.bot','.bot',
+        '.from-bot','.message--assistant','[data-source="assistant"]','[data-role="assistant"]',
+        '.chat-body .message','.chat-message'
+      ];
+      const isAssistantNode = (node) => {
+        if (!(node instanceof HTMLElement)) return false;
+        if (assistantSelectors.some(sel => node.matches(sel))) return true;
+        if (assistantSelectors.some(sel => node.querySelector(sel))) return true;
+        const cls = node.className || '';
+        return /\bmessage\b/.test(cls) && !/\buser\b/.test(cls) && !/\bfrom-user\b/.test(cls);
+      };
 
-  function isAssistantNode(node) {
-    if (!(node instanceof HTMLElement)) return false;
-    if (assistantSelectors.some(sel => node.matches(sel))) return true;
-    if (assistantSelectors.some(sel => node.querySelector(sel))) return true;
-    const cls = node.className || '';
-    return /\bmessage\b/.test(cls) && !/\buser\b/.test(cls) && !/\bfrom-user\b/.test(cls);
-  }
+      // Observe DOM: start cooldown when reply “settles” (no change for 800ms)
+      let currentAssistNode = null;
+      let settleTimer = null;
+      const SETTLE_MS = 800;
 
-  // --- Observe DOM: start cooldown when reply "settles" (no change for 800ms)
-  let currentAssistNode = null;
-  let settleTimer = null;
-  const SETTLE_MS = 800; // adjust if needed
+      const mo = new MutationObserver(mutations => {
+        if (!inFlight) return;
 
-  const mo = new MutationObserver(mutations => {
-    if (!inFlight) return;
-
-    let touchedAssistant = false;
-
-    for (const m of mutations) {
-      for (const n of m.addedNodes) {
-        if (isAssistantNode(n)) {
-          currentAssistNode = n instanceof HTMLElement ? n : currentAssistNode;
-          touchedAssistant = true;
+        let touchedAssistant = false;
+        for (const m of mutations) {
+          for (const n of m.addedNodes) {
+            if (isAssistantNode(n)) { currentAssistNode = n instanceof HTMLElement ? n : currentAssistNode; touchedAssistant = true; }
+          }
+          if (currentAssistNode && (m.target === currentAssistNode || currentAssistNode.contains(m.target))) {
+            touchedAssistant = true;
+          }
         }
-      }
-      if (currentAssistNode && (m.target === currentAssistNode || currentAssistNode.contains(m.target))) {
-        touchedAssistant = true;
-      }
-    }
 
-    if (touchedAssistant) {
-      // Debounce: when updates stop for SETTLE_MS, we consider the reply finished
-      if (settleTimer) clearTimeout(settleTimer);
-      settleTimer = setTimeout(() => {
-        if (inFlight) {
-          inFlight = false;        // request done
-          touchSession();
-          startCooldown(10);       // ✅ start visible 10s timer here
+        if (touchedAssistant) {
+          if (settleTimer) clearTimeout(settleTimer);
+          settleTimer = setTimeout(() => {
+            if (inFlight) {
+              inFlight = false;
+              touchSession();
+              startCooldown(10);     // start timer AFTER assistant finishes
+            }
+          }, SETTLE_MS);
         }
-      }, SETTLE_MS);
+      });
+      mo.observe(root, { childList: true, subtree: true, characterData: true });
+
+      // Safety unlock in case stream stalls; if cooldown is running we stay disabled
+      const safety = () => setTimeout(() => { 
+        inFlight = false; 
+        if (!cooldownTimer) disable(false); 
+      }, FAILSAFE_UNLOCK_MS);
+
+      // Intercept ENTER
+      root.addEventListener('keydown', (e) => { 
+        if (e.key !== 'Enter') return;
+        const b = box(); 
+        const val = (b?.value || '').trim();
+        if (!val) { e.preventDefault(); return; }
+
+        if (!isLocked()) lockSession(); else touchSession();
+        if (blockIfCooling(e)) return;
+
+        if (val === lastText && Date.now() - lastSendAt < COOLDOWN_MS) {
+          e.preventDefault();
+          injectSystemMessage('⚠️ Mesej sama telah dihantar. Cuba ubah soalan.');
+          return;
+        }
+
+        inFlight   = true;
+        lastSendAt = Date.now();
+        lastText   = val;
+        disable(true);
+        safety();
+      }, true);
+
+      // Intercept SEND click
+      root.addEventListener('click', (e) => {
+        const t = e.target;
+        if (!(t instanceof HTMLElement) || !t.closest('.chat-input button')) return;
+
+        const b = box(); 
+        const val = (b?.value || '').trim();
+        if (!val) { e.preventDefault(); return; }
+
+        if (!isLocked()) lockSession(); else touchSession();
+        if (blockIfCooling(e)) return;
+
+        if (val === lastText && Date.now() - lastSendAt < COOLDOWN_MS) {
+          e.preventDefault();
+          injectSystemMessage('⚠️ Mesej sama telah dihantar. Cuba ubah soalan.');
+          return;
+        }
+
+        inFlight   = true;
+        lastSendAt = Date.now();
+        lastText   = val;
+        disable(true);
+        setTimeout(() => { 
+          inFlight = false; 
+          if (!cooldownTimer) disable(false); 
+        }, FAILSAFE_UNLOCK_MS);
+      }, true);
+
+      // Idle unlock (3 min)
+      setInterval(() => {
+        const last = Number(localStorage.getItem(LAST_ACTIVITY) || 0);
+        if (Date.now() - last > IDLE_RESET_MIN * 60_000) {
+          unlockSession();
+          injectSystemMessage('ℹ️ Sesi dinyahaktif selepas tidak aktif. Anda boleh sambung bersembang.');
+        }
+      }, 30_000);
     }
-  });
-  mo.observe(root, { childList: true, subtree: true, characterData: true });
-
-  // Safety unlock in case stream stalls; if cooldown is running we stay disabled
-  const safety = () => setTimeout(() => { 
-    inFlight = false; 
-    if (!cooldownTimer) disable(false); 
-  }, FAILSAFE_UNLOCK_MS);
-
-  // Intercept ENTER
-  root.addEventListener('keydown', (e) => { 
-    if (e.key !== 'Enter') return;
-    const b = box(); 
-    const val = (b?.value || '').trim();
-    if (!val) { e.preventDefault(); return; }
-
-    if (!isLocked()) lockSession(); else touchSession();
-    if (blockIfCooling(e)) return;
-
-    if (val === lastText && Date.now() - lastSendAt < COOLDOWN_MS) {
-      e.preventDefault();
-      injectSystemMessage('⚠️ Mesej sama telah dihantar. Cuba ubah soalan.');
-      return;
-    }
-
-    inFlight   = true;
-    lastSendAt = Date.now();
-    lastText   = val;
-    disable(true);
-    safety();
-  }, true);
-
-  // Intercept SEND click
-  root.addEventListener('click', (e) => {
-    const t = e.target;
-    if (!(t instanceof HTMLElement) || !t.closest('.chat-input button')) return;
-
-    const b = box(); 
-    const val = (b?.value || '').trim();
-    if (!val) { e.preventDefault(); return; }
-
-    if (!isLocked()) lockSession(); else touchSession();
-    if (blockIfCooling(e)) return;
-
-    if (val === lastText && Date.now() - lastSendAt < COOLDOWN_MS) {
-      e.preventDefault();
-      injectSystemMessage('⚠️ Mesej sama telah dihantar. Cuba ubah soalan.');
-      return;
-    }
-
-    inFlight   = true;
-    lastSendAt = Date.now();
-    lastText   = val;
-    disable(true);
-    setTimeout(() => { 
-      inFlight = false; 
-      if (!cooldownTimer) disable(false); 
-    }, FAILSAFE_UNLOCK_MS);
-  }, true);
-
-  // Idle unlock (3 min)
-  setInterval(() => {
-    const last = Number(localStorage.getItem(LAST_ACTIVITY) || 0);
-    if (Date.now() - last > IDLE_RESET_MIN * 60_000) {
-      unlockSession();
-      injectSystemMessage('ℹ️ Sesi dinyahaktif selepas tidak aktif. Anda boleh sambung bersembang.');
-    }
-  }, 30_000);
-}
 
     /* =========================================================
        SEGMENT E — Captcha verify + Chat boot
@@ -390,7 +389,6 @@ function installGuards(){
           body:JSON.stringify({ token, action:'start_chat' })
         });
         const data=await res.json().catch(()=>({})); 
-        console.log('[captcha] verify result:', data);
         return !!data.success;
       }catch(err){ console.error('Captcha verify error',err); return false; }
     }
@@ -409,7 +407,7 @@ function installGuards(){
         ],
         i18n: { en: { inputPlaceholder: 'Tanya soalan di sini… contoh: “Waktu fountain Darul Hana”' } }
       });
-      $('#gate').classList.add('hidden');
+      qs('#gate').classList.add('hidden');
       installGuards();
       installWelcomeAutoHide();
     }
@@ -418,7 +416,7 @@ function installGuards(){
       new Promise((resolve)=>{ try{ window.grecaptcha.ready(resolve); } catch{ resolve(); } });
 
     async function handleStart(){
-      const btn = $('#btnStart'); btn.disabled = true;
+      const btn = qs('#btnStart'); btn.disabled = true;
       try{
         await grecaptchaReady();
         const token = await grecaptcha.execute(RECAPTCHA_SITE_KEY, { action:'start_chat' });
@@ -437,7 +435,7 @@ function installGuards(){
        SEGMENT F — Wire Start button
     ==========================================================*/
     document.addEventListener('DOMContentLoaded', ()=>{
-      $('#btnStart').addEventListener('click', handleStart);
+      qs('#btnStart').addEventListener('click', handleStart);
     });
   </script>
 </body>
